k8s/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubk-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hubk-api
  template:
    metadata:
      labels:
        app: hubk-api
    spec:
      containers:
        - name: api
          image: ghcr.io/maelvb/hubk-api:main
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
