k8s/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubk-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hubk-web
  template:
    metadata:
      labels:
        app: hubk-web
    spec:
      containers:
        - name: web
          image: ghcr.io/maelvb/hubk-web:main
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
