k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubk-web
spec:
  selector:
    app: hubk-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
